# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package]
name = "hello"
version = "0.0.1"
authors = ["sadnessOjisan<sadness.ojisan@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "output hello world"
readme = "README.md"
homepage = "https://github.com/sadnessOjisan"
repository = "https://github.com/sadnessOjisan"
keywords = ["cli", "test", "demo"]
categories = ["command-line-utilities"]
